# portool

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: spec-v0.1.md  spec-v0.2.md  spec-v0.4.md
docs/superpowers/plans/: 2026-07-17-batch-a-hook-safety.md  2026-07-17-v0.5.1-review-fixes.md  2026-07-17-v0.7.0-trust-contract.md  2026-07-17-v0.8.0-review-fixes.md  2026-07-18-v0.10.0-p0-hardening.md  2026-07-18-v0.9.0-review-fixes.md  exec-subcommand-plan.md  portool-v0.1-implementation.md
docs/superpowers/specs/: 2026-07-16-core-hookspath-design.md  2026-07-17-portool-hardening-design.md  2026-07-17-v0.8.0-review-fixes-design.md
examples/webapp/: .env.test  .gitignore  .portool.toml  README.md  compose.yaml  package.json  server.js
src/: alloc.rs  config.rs  display.rs  envfile.rs  envread.rs  error.rs  fault.rs  gc.rs  gitctx.rs  hooks.rs  identity.rs  lib.rs  lock.rs  main.rs  manifest.rs  paths.rs  ports.rs  registry.rs  store.rs
src/cmd/: check.rs  doctor.rs  exec.rs  init.rs  ls.rs  mod.rs  pin.rs  prune.rs  release.rs  reserve.rs  sync.rs
tests/: cli.rs  concurrency.rs  deinit.rs  env_paths.rs  exec.rs  fault.rs  hook_symlink.rs  recovery.rs
