[package]
name = "portool"
version = "0.1.0"
edition = "2021"
description = "Passive global port ledger for git worktrees"
license = "MIT"
repository = "https://github.com/t09tanaka/portool"
readme = "README.md"
keywords = ["git", "worktree", "port", "ports", "dev-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fs2 = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
