[package]
name = "portool"
version = "0.10.0"
edition = "2021"
rust-version = "1.85"
description = "Passive global port ledger for git worktrees"
license = "MIT"
repository = "https://github.com/t09tanaka/portool"
readme = "README.md"
keywords = ["git", "worktree", "port", "ports", "dev-tools"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*", "tests/**/*", "examples/**/*", "README.md", "CHANGELOG.md", "LICENSE"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
fs2 = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
unicode-width = "0.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
